modify add 排班页面

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "url": "^0.11.3",
     "util": "^0.12.5",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
