--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
+    "moment": "^2.30.1",
     "net": "^1.0.2",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "request": "^2.88.2",
