--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^1.7.12",
     "ant-design-vue": "^1.7.8",
     "assert": "^2.1.0",
     "axios": "^1.6.2",
